--- a/public/stylesheets/_pages.scss
+++ b/public/stylesheets/_pages.scss
@@ -6,3 +6,5 @@
 @import './pages/dashboard';
 @import './pages/carer-profile';
 @import './pages/profile-dog';
+@import './pages/carer-profile-service';
+@import './pages/checkPages';
