--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,9 +9,9 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <script src="http://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
     <script>
-      /*var socket = io.connect('http://localhost:3070', { 
+      var socket = io.connect('http://localhost:3000', { 
         'forceNew': true 
-      }); */
+      });
     </script>
   </head>
   <body>
