--- a/views/carer/dashboard.hbs
+++ b/views/carer/dashboard.hbs
@@ -1,39 +1,13 @@
 <main class="v-dashboard">
     <h1>DahsBoard</h1>
     <p>Hola {{currentUserInfo.carer.name}}!</p>
-    
-        {{#if contract}}
-            {{#each contract}}
-            <div class="petition">
-                <div class="petition_resume">
-                    <div class="petition_dogPhoto">
-                        <div class="avatar" style="background-image: url('{{contract.dog.photo}}'"></div>
-                    </div>
-                    <div class="petition_dogInfo">
-                        <h3>{{contract.dog.name}}</h3>
-                        <p>Edad: {{contract.dog.age}}</p>
-                        <p>Raza: {{contract.dog.age}}</p>
-                        <a href="/" class="btn btn-md btn-secondary">Ver detalles</a>
-                    </div>
-                </div>
-                <div class="petition_adress">
-                    <p>{{contact.adress}}</p>
-                </div>
-                <div class="petition_actions">
-                    <input type="hidden" name="carerId" value="{{currentUserInfo.carer._id}}">
-                    <a href="/" class="btn-primary btn-lg">Omitir</button>
-                    <a href="/" class="btn-secondary btn-lg">ACEPTAR</button>
-                </div>
-            </div>
-            {{/each}}
-        {{/if}}
+    <div id="contracts"></div>
 </main>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="./../javascripts/services/apiService.js"></script>
 <script src="/javascripts/User.js"></script>
 <script>
     window.addEventListener('load', ()=> {
-
         const checkPetitions = setTimeout( () => {
             apiService
                 .getPendingPetitions()
@@ -42,6 +16,38 @@
                 })
                 .catch((err) => console.log(err));
         }, 3000)
+
+        const showPetitions = (arr) => {
+
+            const wrapper = document.getElementById('contracts');
+            const contractContent = "";
+
+            arr.map(contract => {
+                contractContent += `
+                    <div class="petition">
+                        <div class="petition_resume">
+                            <div class="petition_dogPhoto">
+                                <div class="avatar" style="background-image: url('{{contract.dog.photo}}'"></div>
+                            </div>
+                            <div class="petition_dogInfo">
+                                <h3>{{contract.dog.name}}</h3>
+                                <p>Edad: {{contract.dog.age}}</p>
+                                <p>Raza: {{contract.dog.age}}</p>
+                                <a href="/" class="btn btn-md btn-secondary">Ver detalles</a>
+                            </div>
+                        </div>
+                        <div class="petition_adress">
+                            <p>{{contact.adress}}</p>
+                        </div>
+                        <div class="petition_actions">
+                            <input type="hidden" name="carerId" value="{{currentUserInfo.carer._id}}">
+                            <a href="/" class="btn-primary btn-lg">Omitir</button>
+                            <a href="/" class="btn-secondary btn-lg">ACEPTAR</button>
+                        </div>
+                    </div>
+                `
+            })
+        }
     });
 
 </script>
