--- a/views/carer/dashboard.hbs
+++ b/views/carer/dashboard.hbs
@@ -47,6 +47,8 @@
                     </div>
                 `
             })
+
+            wrapper.innerHTML = contractContent;
         }
     });
 
