--- a/public/stylesheets/_pages.scss
+++ b/public/stylesheets/_pages.scss
@@ -8,3 +8,4 @@
 @import './pages/profile-dog';
 @import './pages/carer-profile-service';
 @import './pages/checkPages';
+@import './pages/confirmation';
