--- a/views/carer-profile.hbs
+++ b/views/carer-profile.hbs
@@ -5,7 +5,7 @@
             <div class="profile_data">
                 <div class="profile_name">{{selectedCarer.name}}</div>
                 <div class="profile_wrapperAvatar">
-                    <div class="avatar cover" style="background: url('{{selectedCarer.profilePhoto}}')"></div>
+                    <div class="avatar cover" style="background-image: url('{{selectedCarer.profilePhoto}}')"></div>
                     <div class="carerCard_bubleTime">
                         <div class="carerCard_buble">
                             <span class="icon-countDownClok"></span>
