--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -813,6 +813,56 @@ main {
       align-items: center;
       justify-content: space-between; }
 
+.v-confirmation {
+  min-height: calc(100vh - 56px);
+  background-color: white; }
+  .v-confirmation #map {
+    position: relative;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 200px; }
+  .v-confirmation .markerMeetingPoint {
+    background-image: url("./../../images/meetingpoint.png");
+    background-size: cover;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    cursor: pointer; }
+  .v-confirmation .subHeader {
+    top: 56px;
+    width: 100%; }
+  .v-confirmation .box-main {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding: 35px;
+    height: 59vh;
+    text-align: center; }
+    .v-confirmation .box-main .illustration {
+      margin-top: -160px;
+      margin-bottom: 20px; }
+      .v-confirmation .box-main .illustration img {
+        margin-left: auto;
+        margin-right: auto;
+        display: block; }
+    .v-confirmation .box-main .transition-message {
+      font-size: 18px;
+      padding: 0 40px; }
+    .v-confirmation .box-main .loading {
+      max-width: 70px;
+      margin: 18px auto; }
+    .v-confirmation .box-main .footer-buttons {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      left: 0;
+      bottom: 25px;
+      padding: 35px 35px 0;
+      display: flex;
+      align-items: center;
+      justify-content: space-between; }
+
 .btn {
   width: 100%;
   display: inline-flex;
