--- a/views/service-confirmation.hbs
+++ b/views/service-confirmation.hbs
@@ -41,7 +41,7 @@
 <h3>Punto de encuentro y recogida</h3>
 <p id="meeting-point"></p>
 
-<button class="btn btn-primary btn-lg" href="/payment">Continuar</button>
+<a type="button" class="btn btn-primary btn-lg" href="/payment">Continuar</a>
 <a href="/service">Cancelar servicio</a>
 
 
