--- a/views/carer/dashboard.hbs
+++ b/views/carer/dashboard.hbs
@@ -38,7 +38,7 @@
             apiService
                 .getPendingPetitions()
                 .then( async (res) => {
-                    console.log(res)
+                    console.log(res.data)
                 })
                 .catch((err) => console.log(err));
         }, 3000)
