--- a/views/carer/login.hbs
+++ b/views/carer/login.hbs
@@ -35,7 +35,7 @@
               </div>
           </div>
           <div class="box-main_footer">
-            <button id="btnContinueSignup" type="submit" class="btn btn-primary btn-lg">Inciniciar sesión</button>
+            <button id="btnContinueSignup" type="submit" class="btn btn-primary btn-lg">Iniciar sesión</button>
             <p class="small-link">¿Aún no eres usuario? Regístrate <a href="/carer/signup">aquí</a></p>
           </div>
       
