Small Fixes, confirmation page

--- a/public/stylesheets/pages/_carer-profile.scss
+++ b/public/stylesheets/pages/_carer-profile.scss
@@ -4,10 +4,27 @@
     padding: 0;
     background-color: $beige-color;
 
+    .profile-background{
+        position: absolute;
+    }
+
+    .subHeader{
+        background-color: transparent;
+        width: 100%;
+        position: absolute;
+        height: 56px;
+        z-index: 2;
+
+        #backLink{
+            color: #000
+        }
+    }
+
     .box-main{
-        padding-top: 50px;
-        overflow: hidden;
+        padding-top: 30px;
+        overflow: visible;
         margin-top: -30px;
+        position: absolute;
 
         .profile-subHeader{
             display: flex;
@@ -17,6 +34,10 @@
                 width: 50%;
                 padding-right: 30px;
             }
+        }
+
+        .profile_name{
+            font-size: 1.9rem;
         }
 
     }
@@ -47,6 +68,7 @@
                 height: 100px;
                 box-shadow: none;
                 border: 6px solid #fff;
+                margin-bottom: -3px;
             }
         }
     }
@@ -91,4 +113,8 @@
         margin-bottom: 25px;
     }
 
+}
+
+.v-profile .box-main .profile_wrapperAvatar .avatar{
+    margin-bottom: -3px;;
 }
