--- a/views/setup.hbs
+++ b/views/setup.hbs
@@ -27,7 +27,7 @@
         </div>
     </section>
     <div class="carerList-block">
-        <p>Cuidadores disponibles (<span id="availableCarersCount">6</span>)</p>
+        <p>Cuidadores disponibles (<span id="availableCarersCount"></span>)</p>
         <section class="box-main box-main--carerList">
             <div id="availableCarersList" class="carerCards">
                 
