--- a/public/stylesheets/components/_carerCard.scss
+++ b/public/stylesheets/components/_carerCard.scss
@@ -3,7 +3,8 @@
     overflow: hidden;
     display: block;
 
-    *{
+    *,
+    *:hover{
         text-decoration: none;
         color: #000;
     }
@@ -11,6 +12,7 @@
     &_details{
         display: flex;
         justify-content: space-between;
+        margin-bottom: 13px;
         
 
         .carerCard_bubleTime{
@@ -35,9 +37,9 @@
                 content: "";
                 position: absolute;
                 width: 1px;
-                height: 39%;
+                height: 60%;
                 border: 1px solid #F97350;
-                bottom: -10px;
+                top: 75px;
                 opacity: 0.3;
             }
 
@@ -51,17 +53,19 @@
             &_content{
                 padding-right: 5px;
                 display: flex;
+                justify-content: space-between;
             }
 
             &_name{
                 font-size: 1.8rem;
                 padding-bottom: 5px;
+                width: 100%;
             }
 
             &_avatar{
                 margin-bottom: 3px;
                 display: flex;
-                align-items: center;
+                align-items: flex-start;
 
                 .avatar{
                     width: 60px;
@@ -80,6 +84,9 @@
                 font-size: 1.4rem;
                 line-height: 1.2;
                 font-style: italic;
+                width: 100%;
+                padding: 0 12px 14px 0;
+                color: #666;
             }
         }
     }
