--- a/public/stylesheets/pages/_confirmation.scss
+++ b/public/stylesheets/pages/_confirmation.scss
@@ -2,21 +2,67 @@
     min-height: calc(100vh - #{$headerheight});
     background-color: white; 
 
+    h3{
+        font-weight: 400;
+        font-size: 1.6rem;
+        margin-bottom: 15px;
+    }
+
+    .box-confirmation-resume{
+        display: flex;
+        justify-content: space-between;
+        flex-flow: column;
+        margin-bottom: 20px;
+
+        dl{
+            width: 50%;
+            margin-bottom: 0;
+            display: flex;
+            justify-content: space-between;
+            width: 100%;
+
+            dt{
+                font-size: 1.3rem;
+                font-weight: 400;
+            }
+
+            dd{
+                font-size: 1.6rem;
+                font-weight: 500;
+            }
+
+            &:last-child{
+                margin-bottom: 0;
+            }
+        }
+    }
+
     #map {
         position: relative;
         top: 0;
         bottom: 0;
         width: 100%;
-        height: 200px;
+        height: 100vh;
     }
 
-    .markerMeetingPoint {
-        background-image: url('./../../images/meetingpoint.png');
-        background-size: cover;
-        width: 50px;
-        height: 50px;
-        border-radius: 50%;
-        cursor: pointer;
+    #meeting-point {
+        position: relative;
+        padding-left: 30px;
+        text-align: left;
+        font-size: 1.3rem;
+        line-height: 1;
+        width: 100%;
+
+        &:before{
+            content: '';
+            background-image: url('./../../images/meetingpoint.png');
+            background-size: contain;
+            width: 20px;
+            height: 20px;
+            position: absolute;
+            background-repeat: no-repeat;
+            left: 0;
+        }
     }
 
     .subHeader{
@@ -24,22 +70,28 @@
         width: 100%;
     }
 
+    .bottom-box{
+        position: absolute;
+        bottom: 0;
+    }
+
     .box-main{
         position: absolute;
         bottom: 0;
         width: 100%;
-        padding: 35px;
-        height: 59vh;
+        padding: 24px 24px 0;
+        height: auto;
         text-align: center;
+        z-index: 3;
 
-        .illustration{
-            margin-top: -160px;
-            margin-bottom: 20px;
+        .profile_data{
+            display: flex;
+            justify-content: space-between;
 
-            img{
-                margin-left: auto;
-                margin-right: auto;
-                display: block;
+            .avatar{
+                width: 73px;
+                height: 73px;
+                margin-top: -53px;
             }
         }
 
@@ -54,15 +106,22 @@
         }
 
         .footer-buttons{
-            position: absolute;
+            position: relative;
             bottom: 0;
             width: 100%;
             left: 0;
-            bottom: 25px;
             padding: 35px 35px 0;
             display: flex;
             align-items: center;
             justify-content: space-between;
+            flex-flow: column;
+        }
+
+        .avatar.cover{
+            background-size: cover;
+            background-position: center;
+            width: 65px;
+            height: 65px;
         }
     }
 }
