payment done, check fields

--- a/public/stylesheets/_base.scss
+++ b/public/stylesheets/_base.scss
@@ -1,4 +1,5 @@
 @import './base/reset';
+@import './base/variables';
 @import './base/colors';
 @import './base/typography';
 @import './base/iconfonts';
