--- a/public/stylesheets/_pages.scss
+++ b/public/stylesheets/_pages.scss
@@ -9,3 +9,5 @@
 @import './pages/carer-profile-service';
 @import './pages/checkPages';
 @import './pages/confirmation';
+@import './pages/payment';
+@import './pages/service-map';
