--- a/public/stylesheets/components/_forms.scss
+++ b/public/stylesheets/components/_forms.scss
@@ -66,6 +66,7 @@ input:-webkit-autofill:active  {
             bottom: 4px;
             left: 0px;
             transition: all 0.3s ease-out;
+            pointer-events: none;
         }
 
         &.is-filled,
