--- a/views/service-map.hbs
+++ b/views/service-map.hbs
@@ -1,49 +1,11 @@
 <script src="http://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
 <script src="https://api.mapbox.com/mapbox-gl-js/v1.8.1/mapbox-gl.js"></script>
 <link href="https://api.mapbox.com/mapbox-gl-js/v1.8.1/mapbox-gl.css" rel="stylesheet" />
-<style>
-    body {
-        margin: 0;
-        padding: 0;
-    }
+<main class="v-service-map">
+    <div id="map"></div>
+    
+</main>
 
-    #map {
-        position: relative;
-        top: 0;
-        bottom: 0;
-        width: 100%;
-        height: 80vh;
-    }
-
-    .markerMeetingPoint {
-        background-image: url('./../images/meetingpoint.png');
-        background-size: cover;
-        width: 50px;
-        height: 50px;
-        border-radius: 50%;
-        cursor: pointer;
-    }
-
-    .markerUser {
-        background-image: url('./../images/usuario.png');
-        background-size: cover;
-        width: 50px;
-        height: 50px;
-        border-radius: 50%;
-        cursor: pointer;
-    }
-
-    .markerCarer {
-        background-image: url('./../images/dog_marker.png');
-        background-size: cover;
-        width: 50px;
-        height: 50px;
-        border-radius: 50%;
-        cursor: pointer;
-    }
-</style>
-
-<div id="map"></div>
 <button type="button" id="end-service" class="btn btn-primary btn-lg">Finalizar el servicio</button>
 
 
